--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,10 +2,12 @@
 environment:
   matrix:
     - julia_version: 1.11
-    - julia_version: 1.6
     - julia_version: nightly
+  COVERALLS_TOKEN:
+    secure: sbF5QVlERWHgljQchrIp88IKbsSxvjJohceuArO9GGQP8Vvud9inltVBzMbI2dJu
 platform:
   - x64
+  - x86
 cache:
   - '%USERPROFILE%\.julia\artifacts'
 matrix:
@@ -13,7 +15,7 @@ matrix:
     - julia_version: nightly
 branches:
   only:
-    - master
+    - main
     - /release-.*/
 notifications:
   - provider: Email
@@ -31,3 +33,5 @@ test_script:
 on_success:
   - echo "%JL_CODECOV_SCRIPT%"
   - C:\julia\bin\julia -e "%JL_CODECOV_SCRIPT%"
+  - C:\julia\bin\julia -e "using Pkg; Pkg.add(\"Coverage\"); using Coverage; Coveralls.submit(process_folder())"
+
