--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,14 @@
 name = "SymplecticPauli"
 uuid = "679b03a7-bf4c-4f28-9f4b-1a046e8c8a8d"
 authors = ["Omar Alsheikh"]
-version = "1.0.0-DEV"
+version = "0.1.0-DEV"
 
 [compat]
-julia = "1.6.7"
+julia = "1.11"
 
 [extras]
+SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "SafeTestsets"]
