added in-place ad!

--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,11 @@ uuid = "679b03a7-bf4c-4f28-9f4b-1a046e8c8a8d"
 authors = ["Omar Alsheikh"]
 version = "0.1.0-DEV"
 
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+
 [compat]
+LinearAlgebra = "1.11"
 julia = "1.11"
 
 [extras]
