--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "SymplecticPauli"
 uuid = "679b03a7-bf4c-4f28-9f4b-1a046e8c8a8d"
 authors = ["Omar Alsheikh"]
-version = "0.1.0-DEV"
+version = "0.1.0"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
